feat: updated website name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF" />
     <meta name="theme-color" content="#ffffff" />
-    <title>Pinoy Big Writer</title>
+    <title>Pinoy Big Writer (PBW) - Writing Proficiency Edition 2.0</title>
   </head>
   <body>
     <div id="root"></div>
